# Emirates_Robotics_2025

mc_scripts/: arudino.py  dump.ino  dump_wo_lib.ino  hard_code.py  sub.py
model_files/: color.py  custom.py  dataset_custom.yaml
obstacle_avoidance/: package.xml
obstacle_avoidance/obstacle_avoidance/: laser_obstacle_avoidance.py
tortoisebot/collector/: package.xml  setup.py
tortoisebot/collector/collector/: color_detector_publisher_node.py  color_detector_sub_node.py  color_test.py  final_node.py
tortoisebot/scripts/: bins_point.py  nav_points.json  waypoints_new.py
tortoisebot/tortoisebot_bringup/launch/: autobringup.launch.py  bringup.launch.py
tortoisebot/tortoisebot_bringup/maps/: field.pgm  field.yaml  room2.pgm  room2.yaml
tortoisebot/tortoisebot_description/launch/: display.launch.py
tortoisebot/tortoisebot_firmware/scripts/: differential.py
tortoisebot/tortoisebot_gazebo/launch/: gazebo.launch.py
tortoisebot/tortoisebot_gazebo/worlds/: custom.sdf  feild.sdf  sample.sdf
tortoisebot/tortoisebot_navigation/config/: laser_filter.yaml  nav2_params_robot.yaml  nav2_params_simulation.yaml
tortoisebot_files/waypoint_bt_navigation/: CMakeLists.txt  package.xml
tortoisebot_files/waypoint_bt_navigation/launch/: waypoint_navigation.launch.py
tortoisebot_files/waypoint_bt_navigation/src/: behavior_tree_main.cpp  final_spin_action.cpp  navigate_to_waypoint.cpp  spin_action.cpp  waypoint_input.cpp
tortoisebot_files/waypoint_bt_navigation/trees/: waypoint_navigation_tree.xml
(+1 files in other folders)
